--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="iStar" />
     
     <!-- Favicon -->
-    <link rel="icon" href="https://res.cloudinary.com/dlna2kuo1/image/upload/v1761658102/cropped-logo_dqwxuq.png" />
-    <link rel="shortcut icon" href="https://res.cloudinary.com/dlna2kuo1/image/upload/v1761658102/cropped-logo_dqwxuq.png" />
-    <link rel="apple-touch-icon" href="https://res.cloudinary.com/dlna2kuo1/image/upload/v1761658102/cropped-logo_dqwxuq.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
